force-app/main/default/objects/Contract_Request__c/fields/Other_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Other_Delivery_Method__c</fullName>
    <description>If &quot;Other&quot; option is selected as the contract delivery method then it is required to fill in the &quot;Other Delivery Method&quot; text box.</description>
    <inlineHelpText>If &quot;Other&quot; option is selected as the contract delivery method then it is required to fill in the &quot;Other Delivery Method&quot; text box.</inlineHelpText>
    <label>Other Delivery Method</label>
    <type>TextArea</type>
</CustomField>