force-app/main/default/objects/Contract_Request__c/fields/Other_Evaluation_Period_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Evaluation_Period_Detail__c</fullName>
    <label>Other Evaluation Period Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>