force-app/main/default/objects/Contract_Request__c/fields/Other_GT_Reporting_Interval__c.field-meta.xml
<CustomField>
    <fullName>Other_GT_Reporting_Interval__c</fullName>
    <inlineHelpText>Enter a value here only if &apos;Other&apos; is specified as the GT Reporting Interval</inlineHelpText>
    <label>Other GT Reporting Interval</label>
    <length>25</length>
    <type>Text</type>
</CustomField>