force-app/main/default/objects/Contract_Request__c/fields/Other_Quantity_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Quantity_Details__c</fullName>
    <label>Other Quantity Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>