force-app/main/default/objects/Contract_Request__c/fields/Other_Service_plan__c.field-meta.xml
<CustomField>
    <fullName>Other_Service_plan__c</fullName>
    <label>Other Service Plan</label>
    <type>TextArea</type>
</CustomField>