force-app/main/default/objects/Contract_Request__c/fields/Other_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Other_Time_Frame__c</fullName>
    <label>Other Term Detail</label>
    <type>TextArea</type>
</CustomField>