force-app/main/default/objects/Contract_Request__c/fields/Out_of_Guidelines_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Guidelines_Pricing__c</fullName>
    <inlineHelpText>Outside price list and sales chips guidelines.</inlineHelpText>
    <label>Out-of-Guidelines Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>