force-app/main/default/objects/Contract_Request__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bill Me</fullName>
            </value>
            <value>
                <fullName>Charge My Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>