force-app/main/default/objects/Contract_Request__c/fields/Pending_Financial_Hold_Duration__c.field-meta.xml
<CustomField>
    <fullName>Pending_Financial_Hold_Duration__c</fullName>
    <formula>IF (ISNULL(Contract_Received__c ), null, IF (ISNULL(Financial_Hold__c ),
null,
Financial_Hold__c - Contract_Received__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Financial Hold field is blank, the duration will be blank.
If the Financial Hold field is complete, the duration is calculated by the financial hold date minus the contract received date.</inlineHelpText>
    <label>Pending Financial Hold (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>