force-app/main/default/objects/Contract_Request__c/fields/Pending_Hold_Needs_Approval_Duration__c.field-meta.xml
<CustomField>
    <fullName>Pending_Hold_Needs_Approval_Duration__c</fullName>
    <formula>IF (ISNULL(Contract_Received__c ), null, IF (ISNULL(Hold_Needs_Approval__c ),
null,
Hold_Needs_Approval__c - Contract_Received__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Hold: Needs Approval field is blank, the duration will be blank.
If the Hold: Needs Approval field is complete, the duration is calculated by the Hold: Needs Approval minus the Contract Received date.</inlineHelpText>
    <label>Pending Hold: Needs Approval (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>