force-app/main/default/objects/Contract_Request__c/fields/Pending_Hold_See_Notes_Duration__c.field-meta.xml
<CustomField>
    <fullName>Pending_Hold_See_Notes_Duration__c</fullName>
    <formula>IF (ISNULL(Contract_Received__c ), null, IF (ISNULL(Hold_See_Notes__c ),
null,
Hold_See_Notes__c - Contract_Received__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Hold: See Notes field is blank, the duration will be blank.
If the Hold: See Notes field is complete, the duration is calculated by the Hold: See Notes minus the Contract Received date.</inlineHelpText>
    <label>Pending Hold: See Notes (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>