force-app/main/default/objects/Contract_Request__c/fields/Pending_NMC_Setup__c.field-meta.xml
<CustomField>
    <fullName>Pending_NMC_Setup__c</fullName>
    <label>Pending NMC Setup</label>
    <type>Date</type>
</CustomField>