force-app/main/default/objects/Contract_Request__c/fields/Period_of_Performance__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Performance__c</fullName>
    <label>Period of Performance</label>
    <type>TextArea</type>
</CustomField>