force-app/main/default/objects/Contract_Request__c/fields/Portal__c.field-meta.xml
<CustomField>
    <fullName>Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal</label>
    <type>Checkbox</type>
</CustomField>