force-app/main/default/objects/Contract_Request__c/fields/Portalble_Units__c.field-meta.xml
<CustomField>
    <fullName>Portalble_Units__c</fullName>
    <label>Portable Units</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>