force-app/main/default/objects/Contract_Request__c/fields/Preferred_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Carrier__c</fullName>
    <label>Preferred Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>