force-app/main/default/objects/Contract_Request__c/fields/Preferred_Carrier_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Carrier_Account_Number__c</fullName>
    <label>Preferred Carrier Account Number</label>
    <type>TextArea</type>
</CustomField>