force-app/main/default/objects/Contract_Request__c/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <label>Pricing Model</label>
    <type>TextArea</type>
</CustomField>