force-app/main/default/objects/Contract_Request__c/fields/Prod_Mgmt_Approver__c.field-meta.xml
<CustomField>
    <fullName>Prod_Mgmt_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Management Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>