force-app/main/default/objects/Contract_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Content Development:  External</fullName>
            </value>
            <value>
                <fullName>Content Development:  Internal</fullName>
            </value>
            <value>
                <fullName>Driver Recruiting Model</fullName>
            </value>
            <value>
                <fullName>Driver Retention Model</fullName>
            </value>
            <value>
                <fullName>Driving Center Platform</fullName>
            </value>
            <value>
                <fullName>Fatigue Risk Model</fullName>
            </value>
            <value>
                <fullName>Global Smart Services</fullName>
            </value>
            <value>
                <fullName>GlobalTRACS</fullName>
            </value>
            <value>
                <fullName>GlobalTRACS &amp; GlobalTRACS Lite</fullName>
            </value>
            <value>
                <fullName>GlobalTRACS Lite</fullName>
            </value>
            <value>
                <fullName>Implementation Services:  Driver Recruiting</fullName>
            </value>
            <value>
                <fullName>Implementation Services:  Driver Retention</fullName>
            </value>
            <value>
                <fullName>Implementation Services:  Fatigue Model</fullName>
            </value>
            <value>
                <fullName>Implementation Services:  Safety Model Driving</fullName>
            </value>
            <value>
                <fullName>Implementation Services:  Safety Model Workers Comp</fullName>
            </value>
            <value>
                <fullName>IVG</fullName>
            </value>
            <value>
                <fullName>JDLink</fullName>
            </value>
            <value>
                <fullName>JDLink &amp; JDLink Express</fullName>
            </value>
            <value>
                <fullName>JDLink &amp; ZXLink</fullName>
            </value>
            <value>
                <fullName>JDLink Express</fullName>
            </value>
            <value>
                <fullName>MCP100</fullName>
            </value>
            <value>
                <fullName>MCP100S</fullName>
            </value>
            <value>
                <fullName>MCP100T</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>OmniExpress</fullName>
            </value>
            <value>
                <fullName>OmniTRACS</fullName>
            </value>
            <value>
                <fullName>OmniTRACS and OmniExpress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>