force-app/main/default/objects/Contract_Request__c/fields/Product_Discount_Period__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount_Period__c</fullName>
    <inlineHelpText>Discounts longer than 36 months require approval.</inlineHelpText>
    <label>Product Discount Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>6 months from schedule date</fullName>
            </value>
            <value>
                <fullName>12 months from schedule date</fullName>
            </value>
            <value>
                <fullName>18 months from schedule date</fullName>
            </value>
            <value>
                <fullName>24 months from schedule date</fullName>
            </value>
            <value>
                <fullName>36 months from schedule date</fullName>
            </value>
            <value>
                <fullName>Initial Term</fullName>
            </value>
            <value>
                <fullName>Terminal Commitment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>