force-app/main/default/objects/Contract_Request__c/fields/Product_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_List_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the product is being sold at List Price.</description>
    <label>Product List Price</label>
    <type>Checkbox</type>
</CustomField>