force-app/main/default/objects/Contract_Request__c/fields/Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Product_Quantity__c</fullName>
    <label>Product Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>