force-app/main/default/objects/Contract_Request__c/fields/Product_Reduced_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Reduced_Price__c</fullName>
    <inlineHelpText>This must be specified if the Product List Price checkbox is not checked.</inlineHelpText>
    <label>Product Reduced Price</label>
    <length>100</length>
    <type>Text</type>
</CustomField>