force-app/main/default/objects/Contract_Request__c/fields/Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services__c</fullName>
    <label>Professional Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Drivers/Dispatchers Training</fullName>
            </value>
            <value>
                <fullName>High Volume Term. Install</fullName>
            </value>
            <value>
                <fullName>High Volume Term. Install w/Solar Panel</fullName>
            </value>
            <value>
                <fullName>Installation Training</fullName>
            </value>
            <value>
                <fullName>Qualcomm Authorized Service Installation</fullName>
            </value>
            <value>
                <fullName>Qualcomm Installation</fullName>
            </value>
            <value>
                <fullName>Terminal Installation</fullName>
            </value>
            <value>
                <fullName>Terminal Installation with Door Sensor</fullName>
            </value>
            <value>
                <fullName>Terminal Installation with Solar Panel</fullName>
            </value>
            <value>
                <fullName>Other Professional Services</fullName>
            </value>
            <value>
                <fullName>Web-based SFM Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>