force-app/main/default/objects/Contract_Request__c/fields/Professional_Services_Details__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Details__c</fullName>
    <label>Professional Services Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>