force-app/main/default/objects/Contract_Request__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flash Development</fullName>
            </value>
            <value>
                <fullName>Flash Translations</fullName>
            </value>
            <value>
                <fullName>Online Learning</fullName>
            </value>
            <value>
                <fullName>Set-up Fee</fullName>
            </value>
            <value>
                <fullName>Writing &amp; Development</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>