force-app/main/default/objects/Contract_Request__c/fields/QTRACS_Portal_Service__c.field-meta.xml
<CustomField>
    <fullName>QTRACS_Portal_Service__c</fullName>
    <label>QTRACS/Portal Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>