force-app/main/default/objects/Contract_Request__c/fields/Qualcomm_Installation_Discount__c.field-meta.xml
<CustomField>
    <fullName>Qualcomm_Installation_Discount__c</fullName>
    <inlineHelpText>Discount Percentage and Number of Terminals</inlineHelpText>
    <label>Qualcomm Installation Discount</label>
    <type>TextArea</type>
</CustomField>