force-app/main/default/objects/Contract_Request__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(ISPICKVAL(Account__r.District__c, &quot;East District 1&quot;), &quot;East&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;East District 2&quot;), &quot;East&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;East District 3&quot;), &quot;East&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;East District 4&quot;), &quot;East&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;East District 5&quot;), &quot;East&quot;, 
IF(ISPICKVAL(Account__r.District__c, &quot;West District 1&quot;), &quot;West&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;West District 2&quot;), &quot;West&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;West District 3&quot;), &quot;West&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;West District 4&quot;), &quot;West&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;West District 5&quot;), &quot;West&quot;, 
IF(ISPICKVAL(Account__r.District__c, &quot;Strategic&quot;), &quot;Strategic&quot;, 
&quot;Other&quot;)))))))))))</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>