force-app/main/default/objects/Contract_Request__c/fields/Related_Contract_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Contract_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If there is an existing Contract Request that is related to this Contract Request, relate them using this field.</inlineHelpText>
    <label>Related Contract Request</label>
    <referenceTo>Contract_Request__c</referenceTo>
    <relationshipName>R00N50000001eJI7EAM</relationshipName>
    <type>Lookup</type>
</CustomField>