force-app/main/default/objects/Contract_Request__c/fields/Request_Assigned_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Request_Assigned_Duration_Days__c</fullName>
    <formula>IF (ISNULL(Assigned__c ), null, IF (ISNULL(Sent_to_Customer__c), Today() - Assigned__c , Sent_to_Customer__c - Assigned__c))</formula>
    <inlineHelpText>The number of days the request has been sitting with a status of &quot;Assigned&quot;
If the Assigned field is blank, the duration will be blank.
If the Assigned field is complete, the duration is calculated by the Sent to Customer Date minus the Assigned date.</inlineHelpText>
    <label>Request Assigned Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>