force-app/main/default/objects/Contract_Request__c/fields/Request_Distributed_Duration__c.field-meta.xml
<CustomField>
    <fullName>Request_Distributed_Duration__c</fullName>
    <formula>IF (ISNULL(Distributed__c ), null, 
  IF(ISNULL(Pending_NMC_Setup__c), 
    (IF (ISNULL(Set_up_Complete__c ),  Today() - Distributed__c , Set_up_Complete__c  - Distributed__c )),    Pending_NMC_Setup__c - Distributed__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Distributed is blank, the duration is calculated by Today minus the Signed by QC date.
If Distributed is complete, the duration is calculated by the Distributed Date minus the Signed by QC date.</inlineHelpText>
    <label>Request Distributed (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>