force-app/main/default/objects/Contract_Request__c/fields/Request_Pending_NMC_Setup_Duration__c.field-meta.xml
<CustomField>
    <fullName>Request_Pending_NMC_Setup_Duration__c</fullName>
    <formula>IF (ISNULL(Set_up_Complete__c ), null, IF (ISNULL(Pending_NMC_Setup__c ),
null , Set_up_Complete__c - Pending_NMC_Setup__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Pending NMC Setup (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>