force-app/main/default/objects/Contract_Request__c/fields/Request_Signed_by_Cust_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Request_Signed_by_Cust_Duration_Days__c</fullName>
    <formula>IF (ISNULL( Contract_Received__c ), null, IF (ISNULL( Signed_by_Qualcomm__c ), Today() -  Contract_Received__c,  Signed_by_Qualcomm__c -  Contract_Received__c))</formula>
    <inlineHelpText>If the Signed by QC Date is blank, the field is calculated by Today minus the Contract Received Date.
If the Signed by QC Date date is populated, the field is calculated by the Signed by QC date minus Contract Received date.</inlineHelpText>
    <label>Request Signed by Cust. Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>