force-app/main/default/objects/Contract_Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Request Pending</fullName>
                <default>true</default>
                <label>Contract Request Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
                <label>In Review</label>
            </value>
            <value>
                <fullName>Contract sent to Customer</fullName>
                <label>Sent for Signature</label>
            </value>
            <value>
                <fullName>Contract received - OT signature pending</fullName>
                <label>Sent for Counter Signature</label>
            </value>
            <value>
                <fullName>Hold: Credit Approval</fullName>
            </value>
            <value>
                <fullName>Hold: Finance Approval</fullName>
            </value>
            <value>
                <fullName>Hold: Needs Approval</fullName>
            </value>
            <value>
                <fullName>Hold: See Notes</fullName>
            </value>
            <value>
                <fullName>Signed by Omnitracs</fullName>
                <label>Signed</label>
            </value>
            <value>
                <fullName>Distributed</fullName>
            </value>
            <value>
                <fullName>Pending NMC Setup</fullName>
            </value>
            <value>
                <fullName>Set-up Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>