force-app/main/default/objects/Contract_Request__c/fields/Request_Submitted_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted_Duration_Days__c</fullName>
    <formula>IF (ISNULL(Submitted_Submitted_for_Approval__c), null, IF (ISNULL( Assigned__c ), Today() -  Submitted_Submitted_for_Approval__c,  Assigned__c -  Submitted_Submitted_for_Approval__c ))</formula>
    <inlineHelpText>The number of days the request has been sitting with a status of &quot;&quot;Submitted&quot;&quot;
If the Submitted field is blank, the duration will be blank.
If the Submitted field is complete, the duration is calculated by the Assigned minus the Submitted date.</inlineHelpText>
    <label>Request Submitted Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>