force-app/main/default/objects/Contract_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Application Terms</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Developer Agreement</fullName>
            </value>
            <value>
                <fullName>FleetRisk Advisors Agreement</fullName>
            </value>
            <value>
                <fullName>GSS Amendment</fullName>
            </value>
            <value>
                <fullName>GSS Work Authorization - Developer</fullName>
            </value>
            <value>
                <fullName>GSS Work Authorization - Services</fullName>
            </value>
            <value>
                <fullName>JDLink &amp; ZXLink (Internal)</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Master Contract and Schedule</fullName>
            </value>
            <value>
                <fullName>Master Test Agreement</fullName>
            </value>
            <value>
                <fullName>Message Services Agreement</fullName>
            </value>
            <value>
                <fullName>New Message Service Contract</fullName>
            </value>
            <value>
                <fullName>New Sales Contract - Eval Conversion</fullName>
            </value>
            <value>
                <fullName>Online Application Terms</fullName>
            </value>
            <value>
                <fullName>OT/OE Retention Toolkit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PPS Agreement</fullName>
            </value>
            <value>
                <fullName>Product Evaluation</fullName>
            </value>
            <value>
                <fullName>Renewal Contract</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Schedule Only</fullName>
            </value>
            <value>
                <fullName>Services Agreement</fullName>
            </value>
            <value>
                <fullName>Telecommunications Link Agreement</fullName>
            </value>
            <value>
                <fullName>TLA</fullName>
            </value>
            <value>
                <fullName>Work Authorization - Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>