force-app/main/default/objects/Contract_Request__c/fields/Requested_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Completion_Date__c</fullName>
    <inlineHelpText>Minimum three days preferred and is subject to terms and approvals being in place.</inlineHelpText>
    <label>Requested Completion Date</label>
    <type>Date</type>
</CustomField>