force-app/main/default/objects/Contract_Request__c/fields/Required_Services__c.field-meta.xml
<CustomField>
    <fullName>Required_Services__c</fullName>
    <label>Required Services</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>PPTP - Customer-Provided Internet Connection</fullName>
            </value>
            <value>
                <fullName>VPN - Customer-Provided Internet Connection</fullName>
            </value>
            <value>
                <fullName>Toll-Free Number Service</fullName>
            </value>
            <value>
                <fullName>Direct Dial Number Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>