force-app/main/default/objects/Contract_Request__c/fields/Reseller_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Requests (Reseller Name)</relationshipLabel>
    <relationshipName>R00N50000001tCQ6EAM</relationshipName>
    <type>Lookup</type>
</CustomField>