force-app/main/default/objects/Contract_Request__c/fields/Reseller_y_n__c.field-meta.xml
<CustomField>
    <fullName>Reseller_y_n__c</fullName>
    <label>Reseller?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>