force-app/main/default/objects/Contract_Request__c/fields/Sales_Mgmt_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sales_Mgmt_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N50000001fRQREA2</relationshipName>
    <type>Lookup</type>
</CustomField>