force-app/main/default/objects/Contract_Request__c/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <inlineHelpText>Please provide detailed information including expected period of performance and any deliverables.</inlineHelpText>
    <label>Scope of Work</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>