force-app/main/default/objects/Contract_Request__c/fields/Self_install_Credit__c.field-meta.xml
<CustomField>
    <fullName>Self_install_Credit__c</fullName>
    <label>Self-install Credit</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>