force-app/main/default/objects/Contract_Request__c/fields/Self_Install_Credit_text__c.field-meta.xml
<CustomField>
    <fullName>Self_Install_Credit_text__c</fullName>
    <inlineHelpText>Amount and Number of Terminals</inlineHelpText>
    <label>Self-Install Credit</label>
    <type>TextArea</type>
</CustomField>